add thumbnail to modules

--- a/src/views/templates/courseCreate/courseModules.ejs
+++ b/src/views/templates/courseCreate/courseModules.ejs
@@ -11,7 +11,7 @@
 <body>
 
     <!-- Create Modules Form -->
-    <form id="moduleForm" action="/api/course/<%= course.id %>/module/create" method="POST">
+    <form id="moduleForm" action="/api/course/<%= course.id %>/module/create" method="POST" enctype="multipart/form-data">
         <!-- Module details section -->
         <h1>
             <%= course.title %> 
@@ -25,6 +25,8 @@
                 <input type="text" class="description" name="description[]"><br><br>
                 <label for="video_link">Video Link:</label><br>
                 <input type="text" class="video_link" name="video_link[]"><br><br>
+                <label for="thumbnail">Thumbnail:</label><br>
+                    <input type="file" id="thumbnail" class="thumbnail" name="thumbnail"><br><br>
                 <button type="button" class="removeModule">X</button>
             </div>
         </div>
