--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -63,6 +63,7 @@
                                 <h3>
                                     <%= module.title %>
                                 </h3>
+                                <img src="<%= module.thumbnail %>" alt="Thumbnail">
                                 <!-- Video player container -->
                                 <div class="plyr__video-embed" id="player<%= module.id %>">
                                     <!-- Embedded video link -->
