import file upload

--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -63,7 +63,7 @@
                                 <h3>
                                     <%= module.title %>
                                 </h3>
-                                <img src="<%= module.thumbnail %>" alt="Thumbnail">
+                                <img src="/uploads/<%= module.thumbnail %>" alt="Thumbnail-<%= module.title%>">
                                 <!-- Video player container -->
                                 <div class="plyr__video-embed" id="player<%= module.id %>">
                                     <!-- Embedded video link -->
