postcreate upload fix bones

--- a/src/views/templates/courseCreate/courseCreate.ejs
+++ b/src/views/templates/courseCreate/courseCreate.ejs
@@ -25,7 +25,7 @@
             <textarea id="description" name="description"></textarea><br><br>
 
             <label for="thumbnail">Thumbnail:</label><br>
-            <input type="file" id="thumbnail" name="thumbnail"><br><br>
+            <input type="file" name="thumbnail" accept="image/*"><br><br>
 
             <h3>Price settings</h3>
             <label for="price">ARS Price:</label><br>
