--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -34,12 +34,14 @@
     <!-- PLAYER -->
     <!-- ========================================================= -->
     <div class="course-container">
+        <img src="<%= course.thumbnail %>" alt="<%= course.slug %>-thumbnail">
         <% if (modules.length> 0) { %>
             <div class="first-module">
                 <div class='course-detail'>
                     <h1>
                         <%= modules[0].title %>
                     </h1>
+                    <img src="<%= course.thumbnail %>" alt="thumbnail-<%= course.slug %>">
                     <!-- Video player container for the first module -->
                     <div class="plyr__video-embed" id="player<%= modules[0].id %>">
                         <!-- Embedded video link -->
