courseDelete from detail

--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -25,7 +25,7 @@
                             <p><a href="/api/course/<%= course.id %>/module/create?courseId=<%= course.id %>">add more modules</a></p>
                         </button>
                         <button>
-                            <p><a href="#">Delete course</a></p>
+                            <p><a href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>">Delete course</a></p>
                         </button>
                     </div>
                 </div>
