--- a/src/views/templates/courseCreate/courseModules.ejs
+++ b/src/views/templates/courseCreate/courseModules.ejs
@@ -20,11 +20,11 @@
         <div id="moduleFields">
             <div class="moduleField">
                 <label for="title">Title:</label><br>
-                <input type="text" class="title" name="title[]"><br><br>
+                <input type="text" class="title" name="title"><br><br>
                 <label for="description">Description:</label><br>
-                <input type="text" class="description" name="description[]"><br><br>
+                <input type="text" class="description" name="description"><br><br>
                 <label for="video_link">Video Link:</label><br>
-                <input type="text" class="video_link" name="video_link[]"><br><br>
+                <input type="text" class="video_link" name="video_link"><br><br>
                 <label for="thumbnail">Thumbnail:</label><br>
                     <input type="file" id="thumbnail" class="thumbnail" name="thumbnail"><br><br>
                 <button type="button" class="removeModule">X</button>
