create form edited

--- a/src/views/templates/courseCreate/courseCreate.ejs
+++ b/src/views/templates/courseCreate/courseCreate.ejs
@@ -22,7 +22,13 @@
             <span id="slugError" style="color: red;"></span><br>
 
             <label for="description">Description:</label><br>
-            <textarea id="description" name="description"></textarea><br><br>
+            <input id="description" name="description"><br><br>
+
+            <label for="text_content">Text Content:</label><br>
+            <textarea id="text_content" name="text_content"></textarea><br><br>
+
+            <label for="video_link">Video Link:</label><br>
+            <input id="video_link" name="video_link"><br><br>
 
             <label for="thumbnail">Thumbnail:</label><br>
             <input type="file" name="thumbnail" accept="image/*"><br><br>
