--- a/src/views/templates/courseUpdate/courseModuleUpdate.ejs
+++ b/src/views/templates/courseUpdate/courseModuleUpdate.ejs
@@ -13,68 +13,28 @@
     <!-- Create Modules Form -->
     <form id="moduleForm" action="/api/course/<%= course.id %>/module/update" method="POST"
         enctype="multipart/form-data">
-        <!-- Module details section -->
+
         <h1>
             <%= course.title %>
         </h1>
-        <h3>Update Modules</h3>
+        <h3>Change course video</h3>
         <div id="moduleFields">
-            <% existingModules.forEach(module=> { %>
-                <div class="moduleField">
-                    <!-- Add hidden input for moduleId -->
-                    <input type="hidden" name="moduleId[]" value="<%= module.id %>">
-                    <!-- Rest of the module fields -->
-                    <label for="title">Title:</label><br>
-                    <input type="text" class="title" name="title[]" value="<%= module.title %>"><br><br>
-                    <label for="description">Description:</label><br>
-                    <input type="text" class="description" name="description[]"
-                        value="<%= module.description %>"><br><br>
-                    <label for="video_link">Video Link:</label><br>
-                    <input type="text" class="video_link" name="video_link[]" value="<%= module.video_link %>"><br><br>
-                    <label for="thumbnail">Thumbnail:</label><br>
-                    <input type="file" id="thumbnail" class="thumbnail" name="thumbnail"><br><br>
-                    <button type="button" class="removeModule">X</button>
+            <div class="moduleField">
+                <div id="moduleFields">
+                    <div class="moduleField">
+
+                        <label for="video_link">Video Link:</label><br>
+                        <input type="text" class="video_link" name="video_link" value="<%= module.video_link %>"><br><br>
+                    </div>
                 </div>
-                <% }); %>
+            </div>
         </div>
-        <button type="button" id="addMore">
-            <p>add more</p>
-        </button>
-        <!-- Use appropriate input fields, labels, and elements -->
 
         <!-- Button to submit module creation -->
+        <!-- Remove space before "hidden" to avoid input being hidden -->
         <input type="hidden" name="courseId" value="<%= courseId %>">
-        <button type="submit">Update Modules</button>
-        <!-- Include error handling for any form submission errors -->
+        <button type="submit">Update Video</button>
     </form>
-
-    <script>
-        // Function to remove a module field when clicking on the "X" button
-        function removeModuleField(event) {
-            const moduleField = event.target.closest('.moduleField');
-            if (moduleField) {
-                moduleField.remove();
-            }
-        }
-
-        // Event listener to handle removing module fields
-        document.getElementById('moduleFields').addEventListener('click', function (event) {
-            if (event.target.classList.contains('removeModule')) {
-                removeModuleField(event);
-            }
-        });
-
-        // Event listener to add more module fields
-        document.getElementById('addMore').addEventListener('click', function () {
-            const moduleFields = document.getElementById('moduleFields');
-            const newModuleField = document.querySelector('.moduleField').cloneNode(true);
-            newModuleField.querySelector('.title').value = ''; // Clear the cloned field value
-            newModuleField.querySelector('.description').value = ''; // Clear the cloned field value
-            newModuleField.querySelector('.video_link').value = ''; // Clear the cloned field value
-            moduleFields.appendChild(newModuleField);
-        });
-    </script>
-
 </body>
 
 </html>
