--- a/src/views/templates/courseUpdate/courseUpdate.ejs
+++ b/src/views/templates/courseUpdate/courseUpdate.ejs
@@ -10,7 +10,7 @@
 
 <body>
     <%- include ('navbar') -%>
-    <%- include ('alert') -%>
+        <%- include ('alert') -%>
 
             <h1>Edit Course</h1>
             <form id="courseEditForm" action="/api/course/<%= course.id %>/update" method="POST"
@@ -19,9 +19,14 @@
                 <input type="text" id="title" name="title" value="<%= course.title %>"><br><br>
 
                 <label for="description">Description:</label><br>
-                <textarea id="description" name="description">
-                    <%= course.description %>
-                </textarea><br><br>
+                <input id="description" name="description" value="<%= course.description %>">
+                </input><br><br>
+
+                <label for="text_content">Text Content:</label><br>
+                <textarea id="text_content" name="text_content" value="<%= course.text_content %>"></textarea><br><br>
+
+                <label for="video_link">Video Link:</label><br>
+                <input id="video_link" name="video_link" value="<%= course.video_link %>"><br><br>
 
                 <label for="ars_price">ARS Price:</label><br>
                 <input type="number" id="ars_price" name="ars_price" value="<%= course.ars_price %>"><br><br>
