--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -61,6 +61,7 @@
         <h3>
             <%= course.description %>
         </h3>
+        <p><%= course.text_content %></p>
         <br>
     </div>
 
