--- a/src/views/templates/courseEnroll.ejs
+++ b/src/views/templates/courseEnroll.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button>
-        <a href="/courses">Go back to All Courses</a>
+        <a href="/api/courses">Go back to All Courses</a>
     </button>
     <hr>
     <div class='course-overview'>
