--- a/src/views/templates/courseOverview.ejs
+++ b/src/views/templates/courseOverview.ejs
@@ -15,7 +15,7 @@
         <%- include ('alert') -%>
             <div class="course-container">
                 <button>
-                    <a href="/courses">Go back to All Courses</a>
+                    <a href="/api/courses">Go back to All Courses</a>
                 </button>
                 <hr>
                 <div class='course-overview'>
