--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -3,7 +3,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/api/course/create">Create Course</a></li>
-            <li><a href="/api/courses?page=1">Courses</a></li>
+            <li><a href="/api/courses">Courses</a></li>
             | <% if (user && user.name) { %>
                 <li class="user-info">Welcome, <%= user.name %>!</li>
                 <li><a href="/api/courses-owned">My courses |</a></li>
