--- a/src/public/css/courses.css
+++ b/src/public/css/courses.css
@@ -58,6 +58,13 @@
     color: #9e35e4;
 }
 
+/* pagination bar */
+.pagination a {
+    margin-right: 10px;
+    background-color: #333;
+    color: #ccc;
+}
+
 /* Media query for responsive layout */
 @media screen and (max-width: 960px) {
     .courses-grid {
