--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -47,6 +47,23 @@
                 </div>
             </div>
 
+            <!-- Pagination -->
+            <div class="pagination">
+                <% if (currentPage> 1) { %>
+                    <a href="/api/courses?page=<%= currentPage - 1 %>">Previous</a>
+                    <% } %>
+
+                        <% for (let i=1; i <=pageCount; i++) { %>
+                            <a href="/api/courses?page=<%= i %>" <% if (currentPage===i) { %>class="active"<% } %>><%= i %>
+                                        </a>
+                            <% } %>
+
+                                <% if (currentPage < pageCount) { %>
+                                    <a href="/api/courses?page=<%= currentPage + 1 %>">Next</a>
+                                    <% } %>
+            </div>
+            <!-- End Pagination -->
+
 </body>
 
 </html>
