--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -7,7 +7,8 @@
             | <% if (user && user.name) { %>
                 <li class="user-info">Welcome, <%= user.name %>!</li>
                 <li><a href="/api/courses-owned">My courses |</a></li>
-                <li><a href="/api/logout">Logout</a></li>
+                <li><a href="/api/logout">Logout |</a></li>
+                <li><a href="/api/admin/users">Users Panel</a></li>
             <% } else { %>
                 <li><a href="/api/login">Login</a></li>
                 <li><a href="/api/signup">Signup</a></li>
