--- a/src/views/templates/coursesOwned.ejs
+++ b/src/views/templates/coursesOwned.ejs
@@ -1,41 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Courses</title>
+    <title>My Library</title>
     <link rel="stylesheet" href="/css/alert.css">
     <link rel="stylesheet" href="/css/navbar.css">
-    <link rel="stylesheet" href="/css/courses.css"> 
+    <link rel="stylesheet" href="/css/courses.css">
+    <link rel="stylesheet" href="/css/pagination.css">
 </head>
+
 <body>
     <%- include ('navbar') -%>
-    <%- include ('alert') -%>
-    <div class="courses-container"> <!-- New container for courses -->
-        <button>
-            <a href="/">Go back Home</a>
-        </button>
-        <hr>
-        <h1>My Library</h1>
-        <div class="course-list">
-            <% if (courses.length > 0) { %>
-              <ul>
-                <% courses.forEach(course => { %>
-                  <li>
-                    <a href="/api/course/<%= course.id %>" >
-                        <img src="<%= course.thumbnail %>" alt="<%= course.title %> Image">
-                        <h2><%= course.title %></h2>
-                        <p><%= course.description %></p>
+        <%- include ('alert') -%>
+            <div class="courses-container">
+                <button>
+                    <a href="/">Go back Home</a>
+                </button>
+                <hr>
+                <h1>My Courses Library</h1>
+                <div class="courses-grid">
+                    <% courses.forEach((course, index)=> { %>
+                        <div class="course-item">
+                            <a href="/api/course/<%= course.id %>">
+                                <img src="<%= course.thumbnail %>" alt="thumbnail-<%= course.slug %>">
+                                <h2>
+                                    <%= course.title %>
+                                </h2>
+                                <p>
+                                    <%= course.description %>
+                                </p>
+                            </a>
+                            <div>
+                                <p><a href="/api/course/<%= course.id %>/update">Edit</a></p>
+                                <p><a href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>">Delete</a>
+                                </p>
+                            </div>
+                        </div>
+                        <% if ((index + 1) % 4===0 && index !==courses.length - 1) { %>
+                </div>
+                <div class="courses-grid">
+                    <% } %>
+                        <% }); %>
+                </div>
+            </div>
+            <!-- Add pagination controls -->
+            <div class="pagination">
+                <!-- Math.ceil: rounds up and returns the smallest integer greater than or equal to a given number -->
+                <% for (let i=1; i <=Math.ceil(totalItems / pageSize); i++) { %>
+                    <a href="/api/courses-owned?page=<%= i %>" class="page-link">
+                        <%= i %>
                     </a>
-                </li>
-                <% }) %>
-              </ul>
-            <% } else { %>
-              <p>No courses owned yet.</p>
-              <a href="courses/">go and see courses</a>
-            <% } %>
-          </div>
-          
-    </div>
+                <% } %>
+            </div>
+
 </body>
+
 </html>
