--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -5,12 +5,12 @@
             <li><a href="/api/courses">Courses</a></li>
             | <% if (user && user.name) { %>
                 <li class="user-info">Welcome, <%= user.name %>!</li>
-                <li><a href="/api/courses-owned">My courses |</a></li>
-                <li><a href="/api/logout">Logout |</a></li>
+                <li><a href="/api/courses-owned">My courses </a></li>
                 <li><a href="/api/course/create">Create Course</a></li>
-                <li><a href="/api/admin/users">Users Panel</a></li>
+                <li><a href="/api/admin/users">Users Panel |</a></li>
+                <li><a href="/api/logout">Logout</a></li>
             <% } else { %>
-                <li><a href="/api/login">Login</a></li>
+                <li><a href="/api/login">Singin</a></li>
                 <li><a href="/api/signup">Signup</a></li>
             <% } %>
         </ul>
