--- a/src/views/templates/admin/usersPanel.ejs
+++ b/src/views/templates/admin/usersPanel.ejs
@@ -2,30 +2,68 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Admin Panel - Users</title>
+  <link rel="stylesheet" href="/css/alert.css">
+  <link rel="stylesheet" href="/css/navbar.css">
 </head>
+
 <body>
-  <h1>Admin Panel - Users</h1>
-  <table>
+  <div class="navigation">
+    <%- include ('navbar') -%>
+      <%- include ('alert') -%>
+  </div>
+  
+  <div class="section-title">
+    <h1>Admin Panel - Users</h1>
+  </div>
+
+  <div class="searchbar">
+    <!-- Add a search input field -->
+    <form action="/api/admin/users" method="GET">
+      <label for="search">Search: </label>
+      <input type="text" id="search" name="search" placeholder="Search by username">
+      <button type="submit">Search</button>
+    </form>
+  </div>
+
+  <table class="users-table">
     <thead>
       <tr>
         <th>Username</th>
+        <th></th>
         <th>Name</th>
+        <th></th>
         <th>Email</th>
+        <th></th>
+        <th>Role</th>
         <!-- Add more columns as needed -->
       </tr>
     </thead>
     <tbody>
-      <% users.forEach(user => { %>
+      <% users.forEach(user=> { %>
         <tr>
-          <td><%= user.username %></td>
-          <td><%= user.name %></td>
-          <td><%= user.email %></td>
+          <td>
+            <%= user.username %>
+          </td>
+          <td></td>
+          <td>
+            <%= user.name %>
+          </td>
+          <td></td>
+          <td>
+            <%= user.email %>
+          </td>
+          <td></td>
+          <td>
+            <%= user.role %>
+          </td>
           <!-- Display more user information -->
         </tr>
-      <% }); %>
+        <% }); %>
     </tbody>
   </table>
 </body>
+
 </html>
