user panel style

--- a/src/views/templates/admin/usersPanel.ejs
+++ b/src/views/templates/admin/usersPanel.ejs
@@ -7,6 +7,7 @@
   <title>Admin Panel - Users</title>
   <link rel="stylesheet" href="/css/alert.css">
   <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/usersPanel.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
   <div class="searchbar">
     <!-- Add a search input field -->
     <form action="/api/admin/users" method="GET">
-      <label for="search">Search: </label>
+      <label for="search"></label>
       <input type="text" id="search" name="search" placeholder="Search users">
       <button type="submit">Search</button>
     </form>
@@ -64,9 +65,9 @@
             <form action="/api/admin/users/change-role" method="POST">
               <input type="hidden" name="userEmail" value="<%= user.email %>">
               <select name="newRole" onchange="this.form.submit()"> <!-- Changed here -->
-                <option value="user" <% if (user.role === 'user') { %> selected <% } %>>User</option>
-                <option value="admin" <% if (user.role === 'admin') { %> selected <% } %>>Admin</option>
-                <option value="staff" <% if (user.role === 'staff') { %> selected <% } %>>Staff</option>
+                <option value="user" <% if (user.role==='user' ) { %> selected <% } %>>User</option>
+                <option value="admin" <% if (user.role==='admin' ) { %> selected <% } %>>Admin</option>
+                <option value="staff" <% if (user.role==='staff' ) { %> selected <% } %>>Staff</option>
                 <!-- Add more roles if needed -->
               </select>
             </form>
@@ -76,6 +77,25 @@
         <% }); %>
     </tbody>
   </table>
+
+  <div class="save-button">
+    <!-- Save button -->
+    <button onclick="saveAndReload()">Save</button>
+  </div>
+
+<!-- scripts -->
+<!-- ================================================================================= -->
+  <script id="save-and-reload">
+    function saveAndReload() {
+      // Redirect to the desired URL
+      window.location.href = '/api/admin/users';
+      
+      // Reload the page after 1 second (adjust timing as needed)
+      setTimeout(function() {
+        location.reload();
+      }, 1000);
+    }
+  </script>
 </body>
 
 </html>
