--- a/src/views/templates/admin/usersPanel.ejs
+++ b/src/views/templates/admin/usersPanel.ejs
@@ -5,6 +5,7 @@
 
 <head>
   <title>Admin Panel - Users</title>
+  <link rel="stylesheet" href="/css/sectionTitle.css">
   <link rel="stylesheet" href="/css/alert.css">
   <link rel="stylesheet" href="/css/navbar.css">
   <link rel="stylesheet" href="/css/usersPanel.css">
