--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Courses</title>
+    <link rel="stylesheet" href="/css/sectionTitle.css">
     <link rel="stylesheet" href="/css/alert.css">
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/courses.css">
@@ -13,49 +14,48 @@
 
 <body>
     <%- include ('navbar') -%>
-        <%- include ('alert') -%>
-            <div class="courses-container">
-                <button>
-                    <a href="/">Go back Home</a>
-                </button>
-                <hr>
-                <h1>All Courses</h1>
-                <div class="courses-grid">
-                    <% courses.forEach((course, index)=> { %>
-                        <div class="course-item">
-                            <a href="/api/course/<%= course.id %>/overview">
-                                <img src="<%= course.thumbnail %>" alt="thumbnail-<%= course.slug %>">
-                                <h2>
-                                    <%= course.title %>
-                                </h2>
-                                <p>USD <%= course.usd_price %> | ARS <%= course.ars_price %>
-                                </p>
-                                <p>
-                                    <%= course.description %>
-                                </p>
-                            </a>
-                            <div>
-                                <p><a href="/api/course/<%= course.id %>/update">Edit</a></p>
-                                <p><a href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>">Delete</a>
-                                </p>
-                            </div>
-                        </div>
-                        <% if ((index + 1) % 4===0 && index !==courses.length - 1) { %>
-                </div>
-                <div class="courses-grid">
-                    <% } %>
-                        <% }); %>
-                </div>
-            </div>
-            <!-- Add pagination controls -->
-            <div class="pagination">
-                <!-- Math.ceil: rounds up and returns the smallest integer greater than or equal to a given number -->
-                <% for (let i=1; i <=Math.ceil(totalItems / pageSize); i++) { %>
-                    <a href="/api/courses?page=<%= i %>" class="page-link">
-                        <%= i %>
+    <%- include ('alert') -%>
+
+    <div class="courses-container">
+        <div class="section-title">
+            <h1>All Courses</h1>
+        </div>
+        <div class="courses-grid">
+            <% courses.forEach((course, index)=> { %>
+                <div class="course-item">
+                    <a href="/api/course/<%= course.id %>/overview">
+                        <img src="<%= course.thumbnail %>" alt="thumbnail-<%= course.slug %>">
+                        <h2>
+                            <%= course.title %>
+                        </h2>
+                        <p>USD <%= course.usd_price %> | ARS <%= course.ars_price %>
+                        </p>
+                        <p>
+                            <%= course.description %>
+                        </p>
                     </a>
-                <% } %>
-            </div>
+                    <div>
+                        <p><a href="/api/course/<%= course.id %>/update">Edit</a></p>
+                        <p><a href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>">Delete</a>
+                        </p>
+                    </div>
+                </div>
+                <% if ((index + 1) % 4===0 && index !==courses.length - 1) { %>
+        </div>
+        <div class="courses-grid">
+            <% } %>
+                <% }); %>
+        </div>
+    </div>
+    <!-- Add pagination controls -->
+    <div class="pagination">
+        <!-- Math.ceil: rounds up and returns the smallest integer greater than or equal to a given number -->
+        <% for (let i=1; i <=Math.ceil(totalItems / pageSize); i++) { %>
+            <a href="/api/courses?page=<%= i %>" class="page-link">
+                <%= i %>
+            </a>
+        <% } %>
+    </div>
 
 </body>
 
