--- a/src/views/templates/home.ejs
+++ b/src/views/templates/home.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="/css/sectionTitle.css">
     <link rel="stylesheet" href="/css/alert.css">
     <link rel="stylesheet" href="/css/navbar.css">
 </head>
@@ -11,10 +12,9 @@
     <%- include ('navbar') -%>
     <%- include ('alert') -%>
 
-
-    <h1>Welcome to Our Website</h1>
-
-    
+    <div class="section-title">
+        <h1>Welcome to Our Website</h1>
+    </div>
 
     <script src="/js/alert.js"></script>
 </body>
